--- a/client/templates/mytrackedlist/mytrackedlist.html
+++ b/client/templates/mytrackedlist/mytrackedlist.html
@@ -39,7 +39,7 @@
 				<button class="btn btn-primary">
 					<i class="fa fa-search"></i>
 				</button>
-				<button class="btn btn-success getStats" data-xpath="{{xpath}}" data-url="{{urlFromScrape}}">
+				<button class="btn btn-success getStats" data-value="{{value}}" data-xpath="{{xpath}}" data-url="{{urlFromScrape}}">
 					<i class="fa fa-line-chart"></i>
 				</button>
 			</td>
